--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: EDM PORTFOLIO
 show_downloads: true 
-#theme: jeykll-theme-minimal 
-remote_theme: pages-themes/minimal@v0.2.0
+#theme: jeykll-theme-merlot 
+remote_theme: pages-themes/merlot@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
